--- a/index.css
+++ b/index.css
@@ -6,11 +6,13 @@ body{
     background-repeat: no-repeat;
     min-height: 100vh;
     image-rendering: pixelated;
+    margin: 0;
+    border: 1px solid red;
 
 }
+
 *{
     font-family: 'Raleway', sans-serif;
-
 }
 nav ul li{
     list-style-type: none;
@@ -21,7 +23,9 @@ nav ul{
     display: flex;
     justify-content: space-between;
     padding: 0;
-    margin: 1px;
+    margin-top: 10px;
+    margin-left: 10px;
+    
 }
 #logo{
     background-color: rgb(3, 3, 46);
@@ -33,11 +37,12 @@ nav ul{
     font-family: 'Ubuntu', sans-serif;
     font-size: 1.1rem;
     border-bottom: 3px solid #62c1d4;
+    
 }
 #containerWrapper{
     display: grid;
     place-content: center;
-    height: 100vh;
+    height: 95vh;
 }
 #container{
     max-width: 100vw;
@@ -52,6 +57,9 @@ nav ul{
     align-items: center;
 
 }
+#options{
+    display: inline-block;
+}
  button {
     background-color: crimson;
     border-color: crimson;
@@ -59,6 +67,9 @@ nav ul{
     border-radius: 5px;
     width: 110px;
     height: 30px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;    
 }
 button:hover{
     box-shadow: 1px 1px 1px lightcoral;
@@ -80,7 +91,7 @@ button:hover{
 #modalContent{
     min-width: 40vw;
     max-width: 100vw;
-    height: 35vh;
+    height: auto;
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -93,4 +104,18 @@ h3,h2{
     
     margin-right: 20px;
     margin-left: 20px;
+}
+#region{
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    height: 30px;
+    margin-bottom: 15px;
+}
+input[type='radio']{
+    margin-bottom: 20px;
+    text-align: left;
+    -webkit-appearance: checkbox;
+}
+#results{
+    font-size: 2em;
 }
