--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 600px) {
+   
+    #container{
+        width: 90vw;
+    }
+  }
 body{
     background-color: #F9F5F2;
     background-image: url('./background.svg');
@@ -45,7 +51,6 @@ nav ul{
     height: 95vh;
 }
 #container{
-    max-width: 100vw;
     min-width: 40vw;
     height: 60vh;
     border: 1px solid lightgray;
@@ -55,6 +60,7 @@ nav ul{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-left: 20px;
 
 }
 #options{
